# LazyLog-Artifact

./: .dockerignore  Dockerfile  docker-compose.yml  gen_compose.py  run_docker.sh
scripts/: common.sh  run_test.sh  usr_cfg.sh
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/benchmark/: CMakeLists.txt
src/client/: CMakeLists.txt  basic_client.cc  lazylog_cli.cc  lazylog_cli.h
src/client/benchmarking/: CMakeLists.txt
src/cons_log/: CMakeLists.txt  cons_log_cli.h  cons_log_erpc_cli.cc  cons_log_erpc_cli.h  erpc_cl_transport.cc
src/cons_log/storage/: CMakeLists.txt  shard_client.cc  shard_server.cc  shard_server_wo_opt.cc
src/dur_log/: CMakeLists.txt  dur_log_cli.h  dur_log_erpc_cli.cc  dur_log_erpc_cli.h  erpc_dl_transport.cc
src/rpc/: rpc_token.h
src/utils/: properties.h
tst/: CMakeLists.txt
